packages/error/test/helpers/throw-error.ts
import { SemanticReleaseError } from '../../src';

export const throwError = () => {
  throw new SemanticReleaseError('message', 'code');
};
